# noita_quick_save

./: .gitignore  Pipfile  README.md  noita_quick_save.py  pyproject.toml  requirements.txt  save_manager.py  util_linux.py  util_windows.py
noita_quick_save/: __main__.py  save_manager.py  util.py  util_windows.py
